--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1782,107 +1782,107 @@ stories:
   domain: http://www.dunlapiowa.com/
   link: https://www.dunlapiowa.com/2016/05/02/video-of-the-week/
 images:
-- name: flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-- name: blossombar-yellow-collage-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-00-00.jpg
-- name: supreme-court-supremecourt-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-circuit.jpg
-- name: border-fence-border-fence-on-hill-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-wols.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
-- name: sand-hand-sand-hand-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-diego-rivera1.jpg
-- name: mistywoods-babyfoot-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-emily-carr.jpg
-- name: old-door-lock-old-door-lock-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-color.jpg
-- name: legal-statue-legalstatue-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-pond.jpg
-- name: nazi-invasion-high-speed-train-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-high-speed-train-station.jpg
-- name: window-window-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-marcel-duchamp.jpg
-- name: oldhotel-oldhotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-brush.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-- name: copper-circuit-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-desktop-laptop-chair.jpg
-- name: death-valley-death-valley-national-park-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-monet-one.jpg
-- name: downtown-trucksilo-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-light-dali.jpg
-- name: oldhouse-granaryfield-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
-- name: old-cabin-oldcabin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-matrix.jpg
+- name: meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
+- name: fence-fence-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
+- name: mistywoods-babyfoot-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-neo-instinct.jpg
+- name: server-cloud-server-racks-clouds-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-gred-mash.jpg
+- name: yosemite-yosemite-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dali-two.jpg
+- name: bf-skinner-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-going-to-dowtown-los-angeles.jpg
+- name: rockingchair-face-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-alien-goggles.jpg
+- name: downtown-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-asteroids.jpg
+- name: nazi-invasion-steam-engine-iceland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-steam-engine-iceland.jpg
+- name: subway-subway-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-diego-rivera1.jpg
+- name: bf-skinner-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-google-front-of-business.jpg
+- name: old-barn-old-barn-1500-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dali-two.jpg
+- name: death-valley-death-valley-national-park-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-rain.jpg
+- name: power-lines-power-lines-empty-space-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-space-pizza.jpg
+- name: aws-s3-stories-new-downtheline-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-downtheline-dark-dali.jpg
+- name: downtheline-downtheline-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dali-three.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
+- name: christianity-christianity-under-construction-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dali-three.jpg
+- name: udnie-IMG_7288.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7288.jpg
+- name: old-church-oldchurch-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-diego-rivera1.jpg
+- name: death-valley-death-valley-national-park-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colorful-dream.jpg
+- name: statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
+- name: oldtrain-oldtrain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-bright-sand.jpg
+- name: old-barn-old-barn-1500-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-collage.jpg
+- name: dc-statue-dcstatue-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-wols.jpg
+- name: docks-docks-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
+- name: la-muse-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hallway-mirrors-hotel.jpg
+- name: castle-wall-DSC-0067-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-diego-rivera1.JPG
+- name: san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+- name: death-valley-death-valley-national-park-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gan-vogh.jpg
+- name: machine-road-machine-road-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
+- name: old-granary-field-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-color.jpg
+- name: crow_emily_carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_emily_carr.jpg
+- name: braceros-domingo-ulloa-border-fence-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-border-fence-down-the-line.jpg
+- name: birdhouse-birdhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colorful-dream.jpg
+- name: aws-s3-stories-adam-smith-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-blue-circuit-5.jpg
+- name: beach-rocks-beach-rocks-currents-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-pond.jpg
+- name: power-lines-power-lines-empty-space-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-hot-spicy.jpg
+- name: bluelake-plentiful-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-plentiful-file-00-00-38-67.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
+- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+- name: copper-circuit-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-in-station-two-coming.jpg
+- name: status-berlin-status-berlin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
+- name: capital-battle-capitolbattle-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-satan-red.jpg
+- name: wind-mills-windmills-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-three.jpg
+- name: gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
+- name: oldsmallboat-oldsmallboat-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-smoking-cigarette.jpg
 - name: server-cloud-server-racks-clouds-bright-sand.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-bright-sand.jpg
-- name: la-muse-city-vancouver-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-vancouver-clouds.jpg
-- name: old-church-oldchurch-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-really-hot.jpg
-- name: locked-up-steam-lock-up-steam-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
-- name: school-clouds-church-clouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-collage.jpg
-- name: window-window-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dry-skin.jpg
-- name: carry-load-carryload-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-matrix.jpg
-- name: razorcliff-razorcliff-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-color.jpg
-- name: gypsy-wagon-gypsywagon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-sand-paper.jpg
-- name: oldsmallboat-oldsmallboat-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-oily-mcoilface.jpg
-- name: old-door-lock-old-door-lock-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dry-skin.jpg
-- name: stalin-time-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-lincoln-sitting-front.jpg
-- name: rain-princess-cannon_36556797762_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-cannon_36556797762_o.jpg
-- name: border-fence-border-fence-on-hill-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smooth-ride.jpg
-- name: aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
-- name: file-00-00-40-84.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-40-84.jpg
-- name: san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-- name: death-valley-death-valley-national-park-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-diego-rivera1.jpg
-- name: nyc-flag-nycflag-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-pablo-blue.jpg
-- name: white-house-lawn-white-house-window-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-space-pizza.jpg
-- name: rain-princess-border-fence-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line.jpg
-- name: copper-circuit-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cruise-ship-shore-log.jpg
-- name: christianity-christianity-under-construction-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
-- name: machine-road-machine-road-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-hot-spicy.jpg
-- name: aws-s3-stories-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit-3.jpg
-- name: hollywood-building-hollywood-building-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alberto-giacometti.jpg
-- name: power-lines-power-lines-empty-space-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-asteroids.jpg
-- name: stories-machine-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
-- name: machine-road-machine-road-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-blocks.jpg
-- name: old-gas-pumps-oldgaspumps-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smooth-ride.jpg
+- name: subway-subway-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-aqua.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
 ---
 Pitt And Eastern Michigan Aim To End Bowl Skids In Detroit.&nbsp;Erdogan In Tunisia For Surprise Visit To Discuss Libya.&nbsp;Rumford Residents Paying It Forward At Christmas.&nbsp;Christian Outreach Center To Provide Free Christmas Baskets.&nbsp;Defensive Player Of The Year.&nbsp;Algeria Buries Military Chief, De Facto Ruler Amid Protests.&nbsp;Christmas Services Around The Island.&nbsp;Rust Belt Region Banks On Becoming Hub For Electric Vehicles.&nbsp;
